--- a/index.html
+++ b/index.html
@@ -65,8 +65,13 @@
     </head>
 
     <body id="app" class="dom-temp">
-        <p :html="html" :bg-color="#000" :color="#ff0000">adfasdf</p>
-        <input type="text" :model="title">
+        <h1 :id="title" :if="heading == 1">{{ title }} 1</h1>
+        <h2 :else-if="isH2">{{ title }} 2</h2>
+        <h3 :else-if="heading == 3">{{ title }} 3</h3>
+        <h4 :else>{{ title }} 4</h4>
+        <br>
+        <!-- <p :html="html" :bg-color="#000" :color="#ff0000">adfasdf</p> -->
+        <!-- <input type="text" :model="title"> -->
         <temp :path="./static/path/test.html"></temp>
         <temp :path="./static/path/test2.html"></temp>
         <temp-svg :src="./static/image/404.svg"></temp-svg>
@@ -85,20 +90,16 @@
                 </ul>
             </li>
         </ul>
-        <p @click="click">Total: {{ LENGTH(array) }}</p>
-        <p>calc: {{ CALC(num * 10) }}</p>
-        <p>{{ UPPER(test1) }} {{ LOWER(test2) }}</p>
-        <p>{{ DATE(now, YYYY-MM-DD hh:mm:ss) }}</p>
-        <h1 :id="title" :if="heading == 1">{{ title }} 1</h1>
-        <h2 :else-if="isH2">{{ title }} 2</h2>
-        <h3 :else-if="heading == 3">{{ title }} 3</h3>
-        <h4 :else>{{ title }} 4</h4>
         <br>
         {{ string }} {{ CALC(num * 10) }} {{ DATE(now, YYYY-MM-DD hh:mm:ss) }}
         <ul>
             <li :for="(item, index) in ary" :id="item" :index="index">{{ item }} {{ CALC(index + 1) }}</li>
         </ul>
         <img :lazyload="src" alt="">
+        <p @click="click">Total: {{ LENGTH(array) }}</p>
+        <p>calc: {{ CALC(num * 10) }}</p>
+        <p>{{ UPPER(test1) }} {{ LOWER(test2) }}</p>
+        <p>{{ DATE(now, YYYY-MM-DD hh:mm:ss) }}</p>
         <script type="module">
             import { QUI } from "./dist/PDQuickUI.module.js"
 
