新增 `:animation` 與 `:mask` 屬性以及圖片延遲載入的優化，增加過度效果，以提升載入體驗。

--- a/index.html
+++ b/index.html
@@ -62,10 +62,15 @@
 
         <!-- 本地資源 -->
         <!-- <script type="module" src="./static/js/index.js"></script> -->
+        <script src="./dist/PDQuickUI.js"></script>
     </head>
 
-    <body id="app" class="dom-temp">
-        <section id="test"></section>
+    <body id="app" :animation="fade-in">
+        <strong>延遲載入過渡</strong>
+        <hr>
+        <img :lazyload="https://picsum.photos/id/1/640/480" alt="">
+        <hr>
+        <section id="test" :animation="expand"></section>
         <h1 :id="title" :if="heading == 1">{{ title }} 1
             {{ string }} {{ CALC(num * 10) }} {{ DATE(now, YYYY-MM-DD hh:mm:ss) }}</h1>
         <h2 :else-if="isH2">{{ title }} 2
@@ -79,7 +84,10 @@
         <!-- <input type="text" :model="title"> -->
         <temp :path="./static/path/test.html"></temp>
         <temp :path="./static/path/test2.html"></temp>
+        <strong>以下是SVG轉換</strong>
+        <hr>
         <temp-svg :src="./static/image/404.svg"></temp-svg>
+        <hr>
         <ul>
             <li :for="(key, val) in obj" :@click="val.click">
                 {{ key }}: {{ val.name }}
@@ -108,16 +116,15 @@
         <p>calc: {{ CALC(num * 10) }}</p>
         <p>{{ UPPER(test1) }} {{ LOWER(test2) }}</p>
         <p>{{ DATE(now, YYYY-MM-DD hh:mm:ss) }}</p>
-        <script type="module">
-            import { QUI } from "./dist/PDQuickUI.module.js"
-
-            const test = new QUI({
-                id: "test",
-                data: {
-                    test: "test 123"
-                },
-                render: () => {
-                    return `
+        <script>
+            document.addEventListener("DOMContentLoaded", () => {
+                const test = new QUI({
+                    id: "test",
+                    data: {
+                        test: "test 123"
+                    },
+                    render: () => {
+                        return `
                         "{{ test }}",
                         div#main-card.primary.highlighted {
                             style: "background: red;", 
@@ -131,123 +138,124 @@
                                 } 
                             ]
                         }`
-                }
-            })
+                    }
+                })
 
-            const app = new QUI({
-                id: "app",
-                data: {
-                    heading: 1,
-                    isH2: null,
-                    html: "<b>test</b>",
-                    title: "test",
-                    ary: ["test1", "test2", "test3"],
-                    array: [1, 2, 3, 4],
-                    num: 1,
-                    test1: "upper",
-                    test2: "LOWER",
-                    now: Math.floor(Date.now() / 1000),
-                    string: "test",
-                    src: "https://img.shields.io/badge/read-English%20Version-ffffff",
-                    obj: {
-                        home: {
-                            name: 'Home',
-                            click: "click1",
-                            ary: [
-                                {
-                                    name: 'Furniture',
-                                    ary1: [
-                                        { name: 'Sofa', price: 300 },
-                                        { name: 'Table', price: 150 }
-                                    ]
-                                },
-                                {
-                                    name: 'Decorations',
-                                    ary1: [
-                                        { name: 'Picture Frame', price: 20 },
-                                        { name: 'Vase', price: 15 }
-                                    ]
-                                }
-                            ]
+                const app = new QUI({
+                    id: "app",
+                    data: {
+                        heading: 1,
+                        isH2: null,
+                        html: "<b>test</b>",
+                        title: "test",
+                        ary: ["test1", "test2", "test3"],
+                        array: [1, 2, 3, 4],
+                        num: 1,
+                        test1: "upper",
+                        test2: "LOWER",
+                        now: Math.floor(Date.now() / 1000),
+                        string: "test",
+                        src: "https://img.shields.io/badge/read-English%20Version-ffffff",
+                        obj: {
+                            home: {
+                                name: 'Home',
+                                click: "click1",
+                                ary: [
+                                    {
+                                        name: 'Furniture',
+                                        ary1: [
+                                            { name: 'Sofa', price: 300 },
+                                            { name: 'Table', price: 150 }
+                                        ]
+                                    },
+                                    {
+                                        name: 'Decorations',
+                                        ary1: [
+                                            { name: 'Picture Frame', price: 20 },
+                                            { name: 'Vase', price: 15 }
+                                        ]
+                                    }
+                                ]
+                            },
+                            food: {
+                                name: "Food",
+                                click: "click2",
+                                ary: [
+                                    {
+                                        name: 'Snacks',
+                                        ary1: [
+                                            { name: 'Potato Chips', price: 10 },
+                                            { name: 'Chocolate', price: 8 }
+                                        ]
+                                    },
+                                    {
+                                        name: 'Beverages',
+                                        ary1: [
+                                            { name: 'Juice', price: 5 },
+                                            { name: 'Tea', price: 3 }
+                                        ]
+                                    }
+                                ]
+                            },
+                        }
+                    },
+                    event: {
+                        click: _ => {
+                            alert("good");
                         },
-                        food: {
-                            name: "Food",
-                            click: "click2",
-                            ary: [
-                                {
-                                    name: 'Snacks',
-                                    ary1: [
-                                        { name: 'Potato Chips', price: 10 },
-                                        { name: 'Chocolate', price: 8 }
-                                    ]
-                                },
-                                {
-                                    name: 'Beverages',
-                                    ary1: [
-                                        { name: 'Juice', price: 5 },
-                                        { name: 'Tea', price: 3 }
-                                    ]
-                                }
-                            ]
+                        click1: _ => {
+                            alert("good1");
                         },
-                    }
-                },
-                event: {
-                    click: _ => {
-                        alert("good");
+                        click2: _ => {
+                            alert("good2");
+                        },
+                        input: _ => {
+                            console.log(app.data)
+                        }
                     },
-                    click1: _ => {
-                        alert("good1");
-                    },
-                    click2: _ => {
-                        alert("good2");
-                    },
-                    input: _ => {
-                        console.log(app.data)
-                    }
-                },
-                when: {
-                    before_render: _ => {
-                        console.log("準備渲染")
-                        // return false;
-                    },
-                    rendered: _ => {
-                        // const html = app.parseToHTML(`
-                        // div#main-card.primary.highlighted { 
-                        //     style: "background: red;", 
-                        //     children: [ 
-                        //         "test",
-                        //         header.title { 
-                        //             data-role: "title" 
-                        //         }, 
-                        //         section.content { 
-                        //             style: "padding: 20px;" 
-                        //         } 
-                        //     ]
-                        // },
-                        // "test"`);
-                        // console.log(html)
-                        // setTimeout(_ => {
+                    when: {
+                        before_render: _ => {
+                            console.log("準備渲染")
+                            // return false;
+                        },
+                        rendered: _ => {
+                            // const html = app.parseToHTML(`
+                            // div#main-card.primary.highlighted { 
+                            //     style: "background: red;", 
+                            //     children: [ 
+                            //         "test",
+                            //         header.title { 
+                            //             data-role: "title" 
+                            //         }, 
+                            //         section.content { 
+                            //             style: "padding: 20px;" 
+                            //         } 
+                            //     ]
+                            // },
+                            // "test"`);
+                            // console.log(html)
+                            // setTimeout(_ => {
 
-                        //     app.data.heading = 3
-                        // }, 1000)
-                        // setTimeout(_ => {
+                            //     app.data.heading = 3
+                            // }, 1000)
+                            // setTimeout(_ => {
 
-                        //     app.data.isH2 = true
-                        //     app.data.obj.home.ary[0].name = "Test"
+                            //     app.data.isH2 = true
+                            //     app.data.obj.home.ary[0].name = "Test"
 
-                        // }, 2000)
-                        console.log("已渲染")
-                    },
-                    before_update: _ => {
-                        console.log("準備更新")
-                        // alert(true)
-                        // return false;
-                    },
-                    updated: _ => {
-                        console.log("已更新")
+                            // }, 2000)
+                            console.log("已渲染")
+                        },
+                        before_update: _ => {
+                            console.log("準備更新")
+                            // alert(true)
+                            // return false;
+                        },
+                        updated: _ => {
+                            console.log("已更新")
+                        }
                     }
-                }
+                });
             });
         </script>
     </body>
