--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 
         <!-- 資源預載: https://cdn.jsdelivr.net -->
         <link rel="preconnect" href="https://cdn.jsdelivr.net">
-        <link rel="preload" href="https://cdn.jsdelivr.net/npm/pdmarkdownkit@latest/dist/PDQuickUI.js" as="script">
-        <link rel="preload" href="https://cdn.jsdelivr.net/npm/pdmarkdownkit@latest/dist/PDRenderKit.js" as="script">
+        <link rel="preload" href="https://cdn.jsdelivr.net/npm/pdquickui@latest/dist/PDQuickUI.js" as="script">
+        <link rel="preload" href="https://cdn.jsdelivr.net/npm/pdrenderkit@latest/dist/PDRenderKit.js" as="script">
         <link rel="preload" href="https://cdn.jsdelivr.net/npm/pdmarkdownkit@latest/dist/PDMarkdownKit.js" as="script">
         <!-- <script src="./dist/PDQuickUI.js" copyright="Pardn Ltd"></script> -->
         <!-- <script src="./src/PDQuickUI.js" copyright="Pardn Ltd"></script> -->
@@ -68,7 +68,7 @@
     </head>
 
     <body id="app" :effect="fade-in">
-        <strong>延遲載入過渡</strong>
+        <strong :html="延遲載入過渡"></strong>
         <hr>
         <img :lazyload="https://picsum.photos/id/1/640/480" alt="">
         <hr>
@@ -236,16 +236,16 @@
                             // },
                             // "test"`);
                             // console.log(html)
-                            // setTimeout(_ => {
+                            setTimeout(_ => {
 
-                            //     app.data.heading = 3
-                            // }, 2000)
-                            // setTimeout(_ => {
+                                app.data.heading = 3
+                            }, 1000)
+                            setTimeout(_ => {
 
-                            //     app.data.isH2 = true
-                            //     app.data.obj.home.ary[0].name = "Test"
+                                app.data.isH2 = true
+                                app.data.obj.home.ary[0].name = "Test"
 
-                            // }, 3000)
+                            }, 2000)
                             console.log("已渲染")
                         },
                         before_update: _ => {
