已修正 `:[attr]` 屬性的渲染邏輯，這一改進確保 `attribute` 在使用時能被正確設置和應用。

--- a/index.html
+++ b/index.html
@@ -146,6 +146,12 @@
                 const app = new QUI({
                     id: "app",
                     data: {
+                        test: {
+                            name: "34567"
+                        },
+                        left: {
+                            is_database_list: 1
+                        },
                         heading: 1,
                         isH2: null,
                         html: "<b>test</b>",
