更新介紹頁。

--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
 
     <body id="app">
         <section class="left" data-index="0">
-            <a href="/index.html">
+            <a href="./index.html">
                 <i class="fa-solid fa-house"></i>
             </a>
-            <a href="/doc.html">
+            <a href="./doc.html">
                 <i class="fa-brands fa-readme"></i>
             </a>
             <a href="https://github.com/pardnchiu/QuickUI/releases" target="_blank">
