修正介紹頁。

--- a/doc.html
+++ b/doc.html
@@ -176,7 +176,7 @@
             <a href="https://github.com/pardnchiu/QuickUI/releases" target="_blank">
                 <i class="fa-solid fa-code-branch"></i>
             </a>
-            <a class="logo" href="/index.html">
+            <a class="logo" href="./index.html">
                 <img src="./static/image/logo.svg" alt="">
                 <strong>QuickUI</strong>
             </a>
