--- a/index.html
+++ b/index.html
@@ -9,32 +9,32 @@
         <meta name="robots" content="index, follow">
 
         <!-- SEO 標題與描述 -->
-        <title>QuickUI - 輕量化前端渲染框架 - 邱敬幃</title>
-        <meta name="title" content="QuickUI - 輕量化前端渲染框架 - 邱敬幃">
-        <meta name="description" content="QuickUI 是一款基於純 JavaScript 搭配原生 APIs 的輕量化前端渲染框架，支援虛擬 DOM、高效數據監控與自動更新，專注於簡化開發流程並提升渲染效能。">
+        <title>QuickUI - 輕量化網站前端框架 - 邱敬幃</title>
+        <meta name="title" content="QuickUI - 輕量化網站前端框架 - 邱敬幃">
+        <meta name="description" content="QuickUI 是一款基於純 JavaScript 搭配原生 APIs 的輕量化網站前端框架，支援虛擬 DOM、高效數據監控與自動更新，專注於簡化開發流程並提升渲染效能。">
         <meta name="keywords" content="QuickUI, JavaScript, Frontend Rendering Framework, Virtual DOM, Efficient Rendering, Auto Update, UI Tools, Lightweight, Rapid Development, Pardn Chiu, 前端渲染框架, 虛擬 DOM, 高效渲染, 自動更新, UI工具, 輕量化, 快速開發, 邱敬幃">
         <meta name="author" content="邱敬幃 Pardn Chiu">
-        <link rel="author" href="https://pardnchiu.github.io">
-        <link rel="canonical" href="https://pardnchiu.github.io/QuickUI/">
+        <link rel="author" href="https://pardn.ltd">
+        <link rel="canonical" href="https://pardn.ltd/QuickUI/">
 
         <!-- Favicon -->
         <link rel="icon" href="./static/image/logo.png" type="image/x-icon">
 
         <!-- Open Graph -->
-        <meta property="og:title" content="QuickUI - 輕量化前端渲染框架 - 邱敬幃">
-        <meta property="og:description" content="QuickUI 是一款基於純 JavaScript 搭配原生 APIs 的輕量化前端渲染框架，支援虛擬 DOM、高效數據監控與自動更新，專注於簡化開發流程並提升渲染效能。">
+        <meta property="og:title" content="QuickUI - 輕量化網站前端框架 - 邱敬幃">
+        <meta property="og:description" content="QuickUI 是一款基於純 JavaScript 搭配原生 APIs 的輕量化網站前端框架，支援虛擬 DOM、高效數據監控與自動更新，專注於簡化開發流程並提升渲染效能。">
         <meta property="og:image" content="./static/image/website.jpg">
-        <meta property="og:url" content="https://pardnchiu.github.io/QuickUI/">
+        <meta property="og:url" content="https://pardn.ltd/QuickUI/">
         <meta property="og:site_name" content="QuickUI">
         <meta property="og:type" content="website">
         <meta property="og:locale" content="zh_TW">
 
         <!-- Twitter -->
         <meta name="twitter:card" content="summary_large_image">
-        <meta property="twitter:title" content="QuickUI - 輕量化前端渲染框架 - 邱敬幃">
-        <meta property="twitter:description" content="QuickUI 是一款基於純 JavaScript 搭配原生 APIs 的輕量化前端渲染框架，支援虛擬 DOM、高效數據監控與自動更新，專注於簡化開發流程並提升渲染效能。">
+        <meta property="twitter:title" content="QuickUI - 輕量化網站前端框架 - 邱敬幃">
+        <meta property="twitter:description" content="QuickUI 是一款基於純 JavaScript 搭配原生 APIs 的輕量化網站前端框架，支援虛擬 DOM、高效數據監控與自動更新，專注於簡化開發流程並提升渲染效能。">
         <meta property="twitter:image" content="./static/image/website.jpg">
-        <meta property="twitter:url" content="https://pardnchiu.github.io/QuickUI/">
+        <meta property="twitter:url" content="https://pardn.ltd/QuickUI/">
 
         <!-- Google Verification -->
         <meta name="google-site-verification" content="YQQ2f6AchR8dcb55Az2BYd_mw4TrP0J1RApD-v2v65Y">
@@ -71,13 +71,13 @@
         {
             "@context": "https://schema.org",
             "@type": "WebPage",
-            "name": "QuickUI - 輕量化前端渲染框架",
-            "description": ""QuickUI 是一款基於純 JavaScript 搭配原生 APIs 的輕量化前端渲染框架，支援虛擬 DOM、高效數據監控與自動更新，專注於簡化開發流程並提升渲染效能。"",
-            "url": "https://pardnchiu.github.io/QuickUI/",
+            "name": "QuickUI - 輕量化網站前端框架 - 邱敬幃",
+            "description": ""QuickUI 是一款基於純 JavaScript 搭配原生 APIs 的輕量化網站前端框架，支援虛擬 DOM、高效數據監控與自動更新，專注於簡化開發流程並提升渲染效能。"",
+            "url": "https://pardn.ltd/QuickUI/",
             "creator": {
                 "@type": "Person",
                 "name": "邱敬幃 Pardn Chiu",
-                "url": "https://pardnchiu.github.io"
+                "url": "https://pardn.ltd"
             },
             "image": "./static/image/website.jpg"
         }
