Updated LICENSE and README.

--- a/index-test.html
+++ b/index-test.html
@@ -149,7 +149,7 @@
                 const app = new QUI({
                     id: "app",
                     i18n: {
-                        zh: "./zh.json",
+                        zh: "./static/zh.json",
                         en: {
                             greeting: "Hello",
                             user: "User"
